# serializer version: 1
# name: TestCorsixTHGenerator.test_generate
  tuple(
    list([
      'corsix-th',
      '--config-file=/userdata/system/configs/corsixth/config.txt',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestCorsixTHGenerator.test_generate[config]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_config[{'cth_free_build_mode': 'true'}]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = true
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_config[{'cth_new_graphics': 'false'}]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = false
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_config[{'cth_play_intro': 'false'}]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = false
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_custom_music
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = [[/userdata/roms/corsixth/MP3]]
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_existing[config]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[cs_CZ]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[cs]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[de_DE]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[de]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[en_GB]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[en]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[en_US]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[en]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[es_ES]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[es]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[es_MX]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[es]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[fi_FI]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fi]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[foobar]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[en]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[fr_FR]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[hu_HU]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[hu]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[it_IT]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[it]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[ko_KR]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[ko]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[nb_NO]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[nb]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[nl_NL]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[nl]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[nn_NO]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[nb]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[oc_FR]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[fr]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[pl_PL]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[pl]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[pt_BR]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[br]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[pt_PT]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[pt]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[ru_RU]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[ru]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[sv_SE]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[sv]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[zh_CN]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[zhs]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_language[zh_TW]
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[zht]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_generate_missing_dirs_and_check_output_raises
  '''
  check_for_updates = false
  theme_hospital_install = [[/userdata/roms/corsixth]]
  unicode_font = [[/usr/share/fonts/dejavu/DejaVuSans.ttf]]
  savegames = [[/userdata/saves/corsixth]]
  screenshots = [[/userdata/screenshots]]
  fullscreen = true
  width = 1920
  height = 1080
  use_new_graphics = true
  free_build_mode = false
  play_intro = true
  language = [[en]]
  audio_music = nil
  
  '''
# ---
# name: TestCorsixTHGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': list([
        'KEY_RIGHTSHIFT',
        'KEY_Q',
      ]),
      'reset': list([
        'KEY_RIGHTSHIFT',
        'KEY_F10',
      ]),
      'restore_state': list([
        'KEY_LEFTALT',
        'KEY_LEFTSHIFT',
        'KEY_L',
      ]),
      'save_state': list([
        'KEY_LEFTALT',
        'KEY_LEFTSHIFT',
        'KEY_S',
      ]),
    }),
    'name': 'corsixth',
  })
# ---
